// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`转义渲染测试 在非特殊符号前的反斜杠，反斜杠不会被消费，不会进行转义 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      \\→\\A\\a\\ \\3\\φ\\«
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`转义渲染测试 特殊符号前加反斜杠，反斜杠会被消费掉用于转义 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      !"#$%&')(*+,-./:;&lt;=&gt;?@][\\^_\`{|}~
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
